--- a/main.ui
+++ b/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1025</width>
+    <width>845</width>
     <height>652</height>
    </rect>
   </property>
@@ -41,7 +41,14 @@
      </widget>
     </item>
     <item>
-     <widget class="QSpinBox" name="spinBox_3"/>
+     <widget class="QSpinBox" name="longtitude">
+      <property name="minimum">
+       <number>-90</number>
+      </property>
+      <property name="maximum">
+       <number>90</number>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
@@ -51,7 +58,14 @@
      </widget>
     </item>
     <item>
-     <widget class="QSpinBox" name="spinBox_2"/>
+     <widget class="QSpinBox" name="latitude">
+      <property name="minimum">
+       <number>-180</number>
+      </property>
+      <property name="maximum">
+       <number>180</number>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QLabel" name="label_3">
@@ -61,19 +75,49 @@
      </widget>
     </item>
     <item>
-     <widget class="QSpinBox" name="spinBox"/>
+     <widget class="QSlider" name="speed">
+      <property name="minimum">
+       <number>19</number>
+      </property>
+      <property name="maximum">
+       <number>35</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </item>
     <item>
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QCheckBox" name="space">
       <property name="text">
        <string>Космическое пространство</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QCheckBox" name="checkBox_2">
+     <widget class="QCheckBox" name="shades">
       <property name="text">
        <string>Тени</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Количество полигонов</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QSlider" name="polygons">
+      <property name="minimum">
+       <number>100</number>
+      </property>
+      <property name="maximum">
+       <number>800</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
@@ -87,6 +131,19 @@
      <width>611</width>
      <height>181</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="start">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>320</y>
+     <width>141</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Рассчитать</string>
    </property>
   </widget>
  </widget>
